--- a/sway/foot/foot.ini
+++ b/sway/foot/foot.ini
@@ -76,7 +76,7 @@ dpi-aware=yes
 # underline-thickness=<font underline thickness>
 
 [mouse]
-# hide-when-typing=no
+hide-when-typing=yes
 # alternate-scroll-mode=yes
 
 [touch]
@@ -84,10 +84,10 @@ dpi-aware=yes
 
 [colors]
 # alpha=1.0
-# background=242424
-# foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
+background=161821
+foreground=c6c8d1
 
 ## Normal/regular colors (color palette 0-7)
 # regular0=242424  # black
