--- a/sway/tofi/config
+++ b/sway/tofi/config
@@ -4,5 +4,5 @@ padding-left = 40
 padding-top= 40
 padding-bottom = 0
 background-color = #161821
-ext-color = #fff
+text-color = #C6C8D1
 selection-color = #e27878
