new ubuntu on thinkpad

--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -54,5 +54,8 @@ bindings = [
 { key = "w", mods= "Command", action = "None"},
 ]
 
+[window]
+decorations = "None"
+
 [mouse]
 hide_when_typing = true
