--- a/sway/tofi/config
+++ b/sway/tofi/config
@@ -1,8 +1,14 @@
-outline-width = 0
-border-width = 0
-padding-left = 40
-padding-top= 40
-padding-bottom = 0
+outline-width = 2
+border-width = 2
+padding-left = 11
+padding-top= 11
+padding-bottom = 11
 background-color = #161821
+border-width = 0
+outline-width = 0
 text-color = #C6C8D1
+font-size = 16
+font =/usr/share/fonts/cantarell/Cantarell-VF.otf
 selection-color = #e27878
+width = 400
+height = 400
